# clawbody

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  README_zh-TW.md  index.html  pyproject.toml  style.css
.github/workflows/: sync-to-huggingface.yml
openclaw-skill/: SKILL.md
src/reachy_mini_openclaw/: __init__.py  config.py  gradio_app.py  main.py  moves.py  openai_realtime.py  openclaw_bridge.py  prompts.py
src/reachy_mini_openclaw/audio/: __init__.py  head_wobbler.py
src/reachy_mini_openclaw/capabilities/: __init__.py  registry.py
src/reachy_mini_openclaw/prompts/: default.txt
src/reachy_mini_openclaw/tools/: __init__.py  core_tools.py
src/reachy_mini_openclaw/vision/: __init__.py  mediapipe_tracker.py  processors.py
